endpoint for appooint creation and update
